--- a/src/styles/pose.css
+++ b/src/styles/pose.css
@@ -4,7 +4,7 @@
   border-radius: 50%;
   border: none;
   font-size: 18px;
-  background-color: #3e3047;
+  background-color: #cac70f;
   color: white;
   outline: none;
 }
